Fix bug in comment window to prevent it from truncating comments

--- a/content/views/ui.threadview.css
+++ b/content/views/ui.threadview.css
@@ -351,13 +351,6 @@ button.mark-toggle.active
     color: #707070;
 }
 
-div.threadview-pane .note-body {
-  height: 20px;
-  margin-right: 5px;
-  overflow: hidden;
-  display: block;
-}
-
 div.threadview-pane p,
 div.threadview-pane ul,
 div.threadview-pane pre,
